--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@
     height: 30px;
     background-color: yellow;
     border: dotted black;
+    /* overflow-y: auto; */
 }
 
 .myMess {
@@ -14,3 +15,9 @@
     background-color: grey;
     border: dotted black;
 };
+
+.messageSection{
+    height: 400px;
+    overflow-y: auto;
+    background-color: green;
+}
