--- a/public/style.css
+++ b/public/style.css
@@ -3,14 +3,14 @@
 * {
     font-family: 'Sahitya', serif;
     box-sizing: border-box;
-    
-    /* background-color: darkslategrey; */
     height: auto;
+    text-decoration: none;
+    color: inherit;
 }
 body {
-    margin: 100px;
+    margin: 70px;
     /* margin-top: 130px; */
-    padding-top: 60px;
+    padding-top: 50px;
     background-color: #3fc0cd;
     color:#cc481a;
 }
@@ -18,6 +18,7 @@ body {
 #app{
     /* background-color: teal; */
 }
+/* Header */
 .Header {
         font-size: 40px;
         background-color: whitesmoke;
@@ -31,32 +32,66 @@ body {
         top: 0;
         right: 0;
         left: 0;
-        height: 150px;
+        height: 120px;
         border-bottom: 4px outset;
         color: #cc481a;
 }
 
-
-
-
+/* Home Page */
 .Home {
-    border: dotted yellow;
-    height: 1000px;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    flex-wrap: wrap;
-    align-items:center;
-    /* overflow: auto; */
+    height: 580px;
+    width: 1100px;
 }
 
+.HomeMain{
+    height: 560px;
+    display: flex;
+    flex-direction: column;
+    border-width: 5px;
+}
+.HomeHeader{
+    text-align: center;
+    width: 600px;
+    font-size: 20px;
+    padding: 10px;  
+}
+
+.HomeDisplaySection{
+    display: flex;
+    justify-content: space-around;
+    /* border: dotted white; */
+    border-width: 5px;
+}
+
+#myPostsTitle{
+    
+}
+
+.myPostSection{
+    height: 400px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    overflow: auto; 
+    border: inset;
+    border-width: 10px;
+}
 .myPosts {
     height: auto;
     width: 400px;
     background-color: whitesmoke;
     border: solid black;
     padding: 30px;
-    /* overflow-y: auto; */
+}
+
+.myMessSection {
+    width: 400px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    overflow: auto; 
+    border: inset;
+    border-width: 10px;
 }
 
 .myMess {
@@ -69,10 +104,93 @@ body {
 
 .messageSection{
     height: 400px;
-    /* overflow-y: auto; */
 }
 
+/* Profile Page */
 .Profile {
-    /* background-color: green; */
+    padding: 10px;
+    font-size: 30px;
+    /* border: dotted red; */
+    border-width: 5px;
+}
+
+.createForm{
+    background-color: whitesmoke;
+    border: inset;
+    border-width: 10px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.createTitle{
+    margin-bottom: 90px;
+    height: 50px;
+    border: dotted blue;
+}
+form {
+    padding: 30px;
+    font-size: 50px;
+    width: 500px;
+    height: auto;
+    
+}
+
+/* Post Page */
+.postPage{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: dotted blue;
+}
+
+.PostsList{
+    margin-top: 20px;
+    height: auto;
+    width: 800px;
+    background-color: whitesmoke;
+    padding: 30px;
+    border: inset;
+    border-width: 10px;
+    text-align: center;
+    font-size: 30px;
+    /* display: flex; */
+    /* justify-content: center; */
+}
+
+Link {
+    text-decoration: none;
+    color: inherit;
+}
+
+.NavLinks {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* View Post Detail Page */
+.viewPost{
+    font-size: 30px;
+}
+
+.editForm{
+    width: auto;
+    background-color: whitesmoke;
+    padding: 30px;
+    border: inset;
+    border-width: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.replyForm{
+    width: auto;
+    background-color: whitesmoke;
+    padding: 30px;
+    border: inset;
+    border-width: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
