--- a/public/style.css
+++ b/public/style.css
@@ -142,7 +142,7 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: dotted blue;
+    /* border: dotted blue; */
 }
 
 .PostsList{
